css/global.css
html {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

*,
:before,
:after {
    box-sizing: inherit;
    font-family: inherit;
}

body {
  background: #071E22;
  color: #FBFFFE;
  font-family: 'Reem Kufi', sans-serif;
  font-size: 18px;
}

.freeze {
  overflow: hidden;
}

.background {
  background: linear-gradient(to bottom right, #071E22, #008999 150%);
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  height: 100vh;
  z-index: -100;
}

.background-pattern {
  position: fixed;
  width: 100%;
  height: 100vh;
  background: url("../img/global/dot.png") fixed;
  pointer-events: none;
}

.main-container {
  position: absolute;
  width: 100%;
  min-height: 100%;
}

a,
a:visited,
a:active,
.text-button {
  color: #008999;
  transition: all 0.2s;
  text-decoration: none;
  background: transparent;
  border: 0;
  cursor: pointer;
}

a:hover,
.text-button:hover {
  color: #17BEBB;
}

.text-button:focus {
  outline: 0;
}

.contact,
.contact:visited,
.contact:active {
  font-size: 1.5em;
  color: #FBFFFE;
  transition: all 0.2s;
  font-variant: small-caps;
  position: fixed;
  top: 1em;
  right: 1em;
}

header {
  position: fixed;
  width: 100%;
  padding: 1em 1em 0;
  top: 0;
  left: 0;
  z-index: 100;
  background: linear-gradient(rgba(7,30,34, 0.99), transparent) no-repeat;
  background-position: 0 0;
  height: 12em;
  transition: all 0.5s ease-in-out;
  will-change: transform;
}

.logo {
  width: 100%;
  height: 100%;
  will-change: transform;
}

.landing header {
  background-position: 0 -50em;
  height: 65vh;
  padding-top: 5%;
}

.intro {
  position: absolute;
  width: 100%;
  left: 0;
  font-size: 2em;
  text-align: center;
  opacity: 0;
  transition: all 0.5s ease-in-out;
}

.landing .intro {
  opacity: 1;
}

main {
  height: 100%;
  position: absolute;
}

section {
  transition: all 0.5s ease-in-out;
  background: linear-gradient(to bottom right, transparent 49.9%, #071E22 50%);
  min-height: 100%;
  padding: 10% 10% 10% 0;
  font-size: 2em;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row-reverse;
  overflow: hidden;
  text-align: right;
}

.landing section {
  opacity: 0;
}

section p {
  padding: 0 0 0 2em;
}

section .hero {
  max-height: 100%;
  width: 30vw;
  margin-left: 10%;
  z-index: 50;
  position: relative;
}

section .default-icon {
  height: 4em;
  float: right;
  margin: 0 0 0 0.5em;
}

section:nth-child(even) .hero {
  left: auto;
  margin-right: 10%;
}

section:nth-child(even) .default-icon {
  float: left;
  margin: 0 0.5em 0 0;
}

section:nth-child(even) {
  flex-direction: row;
  text-align: left;
  background: linear-gradient(to top left, transparent 49.9%, #071E22 50%);
  padding: 10% 0 10% 10%;
}

section:nth-child(even) p {
  padding: 0 2em 0 0;
}

section:first-child {
  margin-top: 30%;
}

.section-nav::before {
  content: attr(data-description);
  font-size: 0.75em;
  display: block;
  text-align: center;
  position: absolute;
  bottom: 3em;
  color: #E4572E;
  font-variant: small-caps;
}

.section-nav {
  position: fixed;
  bottom: 1em;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.75em;
  width: 100%;
  z-index: 60;
}

.section-nav a {
  padding: 0 0.5em;
  transition: all 0.5s ease-in-out;
  position: relative;
}

.section-nav img {
  width: 2em;
  height: 2em;
}

.hover-icon {
  opacity: 0;
  left: 0.5em;
  top: 0;
  position: absolute;
}

.visited .default-icon {
  opacity: 0.33;
}

.default-icon,
.hover-icon {
  transition: all 0.25s linear;
}

a:hover .default-icon {
  opacity: 0;
}

a:hover .hover-icon {
  opacity: 1;
}

h1 {
  margin: 0.2em 0;
  font-family: 'Exo', sans-serif;
  font-weight: 200;
  color: #E4572E;
}

.contact-form {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 14em 5% 5%;
  background: rgba(0, 0, 0, 0.75);
  z-index: 75;
  transition: all 0.5s ease-in-out;
}

.contact-form > div {
  background: #071E22;
  border: 2px solid #008999;
  border-radius: 2em;
  padding: 1em;
  font-size: 1.5em;
}

.contact-form h1 {
  text-align: center;
}

.contact-form label {
  margin: auto;
  display: block;
  color: #FBFFFE;
  width: 20em;
  margin-bottom: 1em;
}

.contact-form input,
.contact-form textarea,
.contact-form button {
  display: block;
  width: 100%;
}

button:not(.text-button) {
  background: #E4572E;
  color: #FBFFFE;
  border: 0;
  font-size: 1.25em;
  padding: 0.1em;
  transition: all 0.2s;
}

button:not(.text-button):hover {
  background: #17BEBB;
}

.close,
.close:visited,
.close:active {
  display: block;
  color: #FBFFFE;
  width: 100%;
  text-align: center;
  font-size: 0.75em;
}

.close:hover {
  color: #17BEBB;
}

.modal-closed {
  opacity: 0;
  pointer-events: none;
}

/** RESPONSIVE **/

@media (max-width: 1280px) {
  section {
    font-size: 1.5em;
  }
}

@media (max-width: 768px) {
  section:not(#spec_hack) {
    font-size: 1.2em;
    display: block;
    padding-top: 10em;
  }
  section:first-child {
    margin-top: 18em;
  }
  section .hero {
    width: 60%;
    max-height: none;
    margin: auto;
  }
  section:last-child .hero {
    margin-bottom: 4em;
  }
  .contact-form {
    padding: 14em 1em 1em;
  }
  .contact-form > div {
    font size: 0.75em;
    width: 100%;
  }
  .contact-form label {
    width: 100%;
  }
}

@media (max-width: 480px) {
  section {
    font-size: 1.5em;
  }
  body {
    font-size: 12px;
  }
  section .hero {
    width: 90%;
  }
}

